# friday

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: litert-lm-python-api-audit.md
scripts/: prepare-macos-signed-resources.sh  smoke_litert_python_worker.py
src/: App.test.tsx  App.tsx  main.tsx  styles.css  types.ts
src-tauri/: .taurignore  Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  002_rag.sql  003_message_content_parts.sql  004_knowledge.sql  005_migration_ledger.sql  006_audit_log_v2.sql
src-tauri/python_tests/: test_friday_litert_worker.py
src-tauri/resources/litert-python/: PATCHES.md
src-tauri/resources/litert-python/macos-aarch64/worker/: friday_litert_worker.py
src-tauri/resources/litert-runtime/: README.md  runtime-manifest.json
src-tauri/resources/searxng/: requirements-macos-aarch64-cp312.txt  source-manifest.json
src-tauri/resources/searxng/core-config/: settings.yml
src-tauri/src/: lib.rs  main.rs  python_runtime.rs  runtime_manifest.rs  searxng.rs  service_diagnostics.rs  session.rs  settings.rs  sidecar.rs
src-tauri/src/knowledge/: mod.rs
src-tauri/src/models/: litert.rs  mod.rs  python_worker.rs
src-tauri/src/rag/: mod.rs
src-tauri/src/storage/: mod.rs
src/components/: AppLogo.tsx  ChatPane.test.tsx  ChatPane.tsx  KnowledgePanel.tsx  MessageBubble.test.tsx  MessageBubble.tsx  SettingsPanel.test.tsx  SettingsPanel.tsx  SetupWizard.test.tsx  SetupWizard.tsx  Sidebar.tsx  StatusBar.tsx
src/hooks/: useAppController.test.tsx  useAppController.ts
src/lib/: app-version.ts  friday-chat.test.ts  friday-chat.ts  reply-languages.ts  tauri-chat-transport.test.ts  tauri-chat-transport.ts
src/test/: setup.ts
src/theme/: illustrationTheme.ts
