[package]
name = "friday"
version = "0.1.0"
edition = "2021"
description = "Friday — Private, local-first AI desktop assistant"

[lib]
name = "friday_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
base64 = "0.22"
futures-util = "0.3"
sysinfo = "0.37"
flate2 = "1"
tar = "0.4"
pdf-extract = "0.10"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
meval = "0.2"
urlencoding = "2"
