[package]
name = "friday"
version = "0.2.3"
edition = "2021"
description = "Friday — Private, local-first AI desktop assistant"

[lib]
name = "friday_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
base64 = "0.22"
sysinfo = "0.37"
flate2 = "1"
tar = "0.4"
pdf-extract = "0.10"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sha2 = "0.10"
anyhow = "1"
arrow-array = "57.2"
arrow-schema = "57.2"
embed_anything = { version = "0.6.7", features = ["audio"] }
futures = "0.3"
lance-index = "4.0.0"
lancedb = "0.27.2"
url = "2"
walkdir = "2"
